# webcrawler

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_webcrawler.py
tests/: base.py  test_webcrawler.py  test_worker.py
webcrawler/: html_client.py  link_manager.py  link_parser.py  worker.py
