[tool.poetry]
name = "webcrawler"
version = "0.1.0"
description = ""
authors = ["Paul Ammann"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
beautifulsoup4 = "^4.9.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"
asynctest = "^0.13.0"
aioresponses = "^0.7.2"
reorder-python-imports = "^2.5.0"
pre-commit = "^2.13.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
